--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="col-12 col-sm-6 col-lg-4 mb-4 d-flex">
           <div class="card shadow h-100 zoom">
             <div class="image-container position-relative overflow-hidden">
-              <img src="../assets/img/firstcard.jpeg" class="card-img-top zoom-img" alt="BMW">
+              <img src="assets/img/firstcard.jpeg" class="card-img-top zoom-img" alt="BMW">
               <div class="overlay-text">اطلاعات</div>
             </div>
             <div class="card-body">
@@ -114,7 +114,7 @@
         <div class="col-12 col-sm-6 col-lg-4 mb-4 d-flex">
           <div class="card shadow h-100 zoom">
             <div class="image-container position-relative overflow-hidden">
-              <img src="../assets/img/benz.png" class="card-img-top zoom-img" alt="Mercedes">
+              <img src="assets/img/benz.png" class="card-img-top zoom-img" alt="Mercedes">
               <div class="overlay-text">اطلاعات</div>
             </div>
             <div class="card-body">
@@ -144,7 +144,7 @@
     <div class="col-12 col-sm-6 col-lg-4 mb-4 d-flex">
       <div class="card shadow h-100 zoom">
         <div class="image-container position-relative overflow-hidden">
-          <img src="../assets/img/audi.png" class="card-img-top zoom-img" alt="Audi">
+          <img src="assets/img/audi.png" class="card-img-top zoom-img" alt="Audi">
           <div class="overlay-text">اطلاعات</div>
         </div>
         <div class="card-body">
@@ -159,7 +159,7 @@
     <div class="col-12 col-sm-6 col-lg-4 mb-4 d-flex">
       <div class="card shadow h-100 zoom">
         <div class="image-container position-relative overflow-hidden">
-          <img src="../assets/img/doge.png" class="card-img-top zoom-img" alt="Dodge Challenger">
+          <img src="assets/img/doge.png" class="card-img-top zoom-img" alt="Dodge Challenger">
           <div class="overlay-text">اطلاعات</div>
         </div>
         <div class="card-body">
@@ -174,7 +174,7 @@
     <div class="col-12 col-sm-6 col-lg-4 mb-4 d-flex">
       <div class="card shadow h-100 zoom">
         <div class="image-container position-relative overflow-hidden">
-          <img src="../assets/img/volvo.png" class="card-img-top zoom-img" alt="Volvo">
+          <img src="assets/img/volvo.png" class="card-img-top zoom-img" alt="Volvo">
           <div class="overlay-text">اطلاعات</div>
         </div>
         <div class="card-body">
