--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
           <div class="card shadow h-100 zoom " data-aos="zoom-in">
             <div class="image-container position-relative overflow-hidden">
-              <img src="../car web/assets/img/firstcard.jpeg" class="card-img-top zoom-img" alt="BMW">
+              <img src="assets/img/firstcard.jpeg" class="card-img-top zoom-img" alt="BMW">
               <div class="overlay-text">اطلاعات</div>
             </div>
             <div class="card-body">
@@ -122,7 +122,7 @@
           
           <div class="card shadow h-100 zoom" data-aos="zoom-in">
             <div class="image-container position-relative overflow-hidden">
-              <img src="../car web/assets/img/benz.png" class="card-img-top zoom-img" alt="Mercedes">
+              <img src="assets/img/benz.png" class="card-img-top zoom-img" alt="Mercedes">
               <div class="overlay-text">اطلاعات</div>
             </div>
             <div class="card-body">
@@ -152,7 +152,7 @@
     <div class="col-12 col-sm-6 col-lg-4 mb-4 d-flex">
       <div class="card shadow h-100 zoom" data-aos="zoom-in">
         <div class="image-container position-relative overflow-hidden">
-          <img src="../car web/assets/img/audi.png" class="card-img-top zoom-img" alt="Audi">
+          <img src="assets/img/audi.png" class="card-img-top zoom-img" alt="Audi">
           <div class="overlay-text">اطلاعات</div>
         </div>
         <div class="card-body">
@@ -167,7 +167,7 @@
     <div class="col-12 col-sm-6 col-lg-4 mb-4 d-flex">
       <div class="card shadow h-100 zoom" data-aos="zoom-in">
         <div class="image-container position-relative overflow-hidden">
-          <img src="../car web/assets/img/doge.png" class="card-img-top zoom-img" alt="Dodge Challenger">
+          <img src="assets/img/doge.png" class="card-img-top zoom-img" alt="Dodge Challenger">
           <div class="overlay-text">اطلاعات</div>
         </div>
         <div class="card-body">
@@ -182,7 +182,7 @@
     <div class="col-12 col-sm-6 col-lg-4 mb-4 d-flex">
       <div class="card shadow h-100 zoom" data-aos="zoom-in">
         <div class="image-container position-relative overflow-hidden">
-          <img src="../car web/assets/img/volvo.png" class="card-img-top zoom-img" alt="Volvo">
+          <img src="assets/img/volvo.png" class="card-img-top zoom-img" alt="Volvo">
           <div class="overlay-text">اطلاعات</div>
         </div>
         <div class="card-body">
